# --C

./: .gitignore  .ignore  Cargo.toml  README.md  ca_compiler.pyi  compiler_tester.py  examples.md  py_ca_compiler.pyi  pyproject.toml  requirements.txt  test.py  test_potato_cpu.py
.github/workflows/: compiler-test.yml  compiler-tests.yml  potato-cpu-tests.yml
automata-tui/: .envrc  Cargo.toml  LICENSE  README.md
automata-visualizer/: Cargo.toml  index.html
src/: constants.rs  generator.rs  lib.rs  main.rs
src/asm_gen/: asm_symbols.rs  binary_instruction.rs  cmp_instruction.rs  helpers.rs  integer_division.rs  interger_division.rs  mod.rs  mov_instruction.rs  registers.rs  unary_instruction.rs
src/automata/: composer.rs  composition.md  mod.rs  terms.rs
src/lambda_calc/: mod.rs
src/lexer/: base_token_builder.rs  lexer.rs  operators.rs  tokens.rs
src/parser/: mod.rs  parse.rs  parser_helpers.rs
src/potato_cpu/: bit_allocation.rs  mod.rs  potato_asm.rs  potato_cpu.rs  potato_vm.rs  py_potato_cpu.rs  py_potato_cpu_tester.rs
src/tacky/: tacky_symbols.rs
src/turing_machine/: mod.rs  turing_machine.rs
test_c_programs/: uintmax.c
