[build-system]
requires = ["maturin>=0.13,<2.0"]
build-backend = "maturin"

[project]
name = "py_ca_compiler"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]
[tool.maturin.package]
include = ["*.pyi"]
